--- a/ihaveasecret/translations/de/LC_MESSAGES/messages.po
+++ b/ihaveasecret/translations/de/LC_MESSAGES/messages.po
@@ -3,11 +3,11 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2024-03-23 18:54+0100\n"
-"PO-Revision-Date: 2024-03-23 15:19+0100\n"
+"PO-Revision-Date: 2024-03-23 18:56+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: fr\n"
-"Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: de\n"
+"Language-Team: de <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,97 +15,93 @@ msgstr ""
 
 #: routes.py:18
 msgid "1 hour"
-msgstr "1 heure"
+msgstr "1 Stunde"
 
 #: routes.py:19
 msgid "1 day"
-msgstr "1 jour"
+msgstr "1 Tag"
 
 #: routes.py:20
 msgid "1 week"
-msgstr "1 semaine"
+msgstr "1 Woche"
 
 #: routes.py:97
 msgid "Sorry, that secret has already been seen or does not exist."
-msgstr "Désolé, ce secret a déjà été consulté ou n'existe pas."
+msgstr "Entschuldigung, dieses Geheimnis wurde bereits angesehen oder existiert nicht."
 
 #: routes.py:135
 msgid "Incorrect password. Please try again."
-msgstr "Mot de passe incorrect. Veuillez réessayer."
+msgstr "Falsches Passwort. Bitte versuchen Sie es erneut."
 
 #: routes.py:145
 msgid ""
 "The secret has been deleted because of too many incorrect password "
 "attempts."
 msgstr ""
-"Le secret a été supprimé en raison de trop nombreuses tentatives de mot "
-"de passe incorrectes."
+"Das Geheimnis wurde aufgrund zu vieler falscher Passwortversuche gelöscht."
 
 #: templates/check_password.html:8
 msgid ""
 "The secret is safeguarded by a password. Please enter the password to "
 "unveil the secret."
 msgstr ""
-"Le secret est protégé par un mot de passe. Veuillez saisir le mot de "
-"passe pour dévoiler le secret."
+"Das Geheimnis ist durch ein Passwort geschützt. Bitte geben Sie das Passwort ein, um das Geheimnis zu enthüllen."
 
 #: templates/check_password.html:22
 msgid "You have one remaining attempt left."
-msgstr "Il vous reste une tentative."
+msgstr "Sie haben noch einen Versuch übrig."
 
 #: templates/check_password.html:24
 #, python-format
 msgid "You have %(n)d remaining attempts left."
-msgstr "Il vous reste %(n)d tentatives."
+msgstr "Sie haben noch %(n)d Versuche übrig."
 
 #: templates/check_password.html:35 templates/create.html:35
 msgid "Your secret password"
-msgstr "Votre mot de passe secret"
+msgstr "Ihr geheimes Passwort"
 
 #: templates/confirm_reveal.html:4 templates/reveal.html:4
 msgid "Read a secret"
-msgstr "Lire un secret"
+msgstr "Ein Geheimnis lesen"
 
 #: templates/confirm_reveal.html:5
 msgid "Reveal secret"
-msgstr "Révéler le secret"
+msgstr "Geheimnis enthüllen"
 
 #: templates/create.html:5
 msgid "Create a secret"
-msgstr "Lire un secret"
+msgstr "Ein Geheimnis erstellen"
 
 #: templates/create.html:19
-#, fuzzy
 msgid "Your secret message"
-msgstr "Votre mot de passe secret"
+msgstr "Ihre geheime Nachricht"
 
 #: templates/create.html:23
 msgid "Time to live"
-msgstr "Durée de vie"
+msgstr "Lebensdauer"
 
 #: templates/create.html:33
 msgid "optional"
-msgstr "optionnel"
+msgstr "optional"
 
 #: templates/create.html:33
 msgid "Password"
-msgstr "Mot de passe"
+msgstr "Passwort"
 
 #: templates/create.html:40
 msgid "Create"
-msgstr "Créer"
+msgstr "Erstellen"
 
 #: templates/created.html:4
 msgid "Secret created"
-msgstr "Secret créé"
+msgstr "Geheimnis erstellt"
 
 #: templates/created.html:7
 msgid ""
 "Your secret has been created. You can share this link to grant\n"
 "        someone access to read it."
 msgstr ""
-"Votre secret a été créé. Vous pouvez partager ce lien pour accorder à "
-"quelqu'un l'accès à sa lecture."
+"Ihr Geheimnis wurde erstellt. Sie können diesen Link teilen, um jemandem den Zugriff darauf zu gewähren."
 
 #: templates/created.html:23
 msgid ""
@@ -113,23 +109,19 @@ msgid ""
 "        either after the chosen time to live expires or when someone "
 "opens the link."
 msgstr ""
-"Votre secret a été stocké sur le serveur et sera supprimé soit après "
-"l'expiration de la durée de vie choisie, soit lorsque quelqu'un ouvre le "
-"lien."
+"Ihr Geheimnis wurde auf dem Server gespeichert und wird gelöscht, entweder nach Ablauf der gewählten Lebensdauer oder wenn jemand den Link öffnet."
 
 #: templates/created.html:25
 msgid "Therefore, the generated link can only be opened once."
-msgstr "Par conséquent, le lien généré ne peut être ouvert qu'une seule fois."
+msgstr "Daher kann der generierte Link nur einmal geöffnet werden."
 
 #: templates/created.html:28 templates/error.html:20 templates/reveal.html:17
 msgid "Create another secret"
-msgstr "Créer un autre secret"
+msgstr "Ein weiteres Geheimnis erstellen"
 
 #: templates/reveal.html:8
 msgid ""
 "This message is displayed only once and will not be available if this "
 "page is reloaded."
 msgstr ""
-"Ce message s'affiche une seule fois et ne sera pas disponible si cette "
-"page est rechargée."
-
+"Diese Nachricht wird nur einmal angezeigt und ist nicht verfügbar, wenn diese Seite neu geladen wird."
