--- a/ihaveasecret/translations/es/LC_MESSAGES/messages.po
+++ b/ihaveasecret/translations/es/LC_MESSAGES/messages.po
@@ -3,11 +3,11 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2024-03-23 18:54+0100\n"
-"PO-Revision-Date: 2024-03-23 15:19+0100\n"
+"PO-Revision-Date: 2024-03-23 18:58+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: fr\n"
-"Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: es\n"
+"Language-Team: es <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,97 +15,96 @@ msgstr ""
 
 #: routes.py:18
 msgid "1 hour"
-msgstr "1 heure"
+msgstr "1 hora"
 
 #: routes.py:19
 msgid "1 day"
-msgstr "1 jour"
+msgstr "1 día"
 
 #: routes.py:20
 msgid "1 week"
-msgstr "1 semaine"
+msgstr "1 semana"
 
 #: routes.py:97
 msgid "Sorry, that secret has already been seen or does not exist."
-msgstr "Désolé, ce secret a déjà été consulté ou n'existe pas."
+msgstr "Lo siento, ese secreto ya ha sido visto o no existe."
 
 #: routes.py:135
 msgid "Incorrect password. Please try again."
-msgstr "Mot de passe incorrect. Veuillez réessayer."
+msgstr "Contraseña incorrecta. Por favor, inténtalo de nuevo."
 
 #: routes.py:145
 msgid ""
 "The secret has been deleted because of too many incorrect password "
 "attempts."
 msgstr ""
-"Le secret a été supprimé en raison de trop nombreuses tentatives de mot "
-"de passe incorrectes."
+"El secreto ha sido eliminado debido a demasiados intentos de contraseña "
+"incorrecta."
 
 #: templates/check_password.html:8
 msgid ""
 "The secret is safeguarded by a password. Please enter the password to "
 "unveil the secret."
 msgstr ""
-"Le secret est protégé par un mot de passe. Veuillez saisir le mot de "
-"passe pour dévoiler le secret."
+"El secreto está protegido por una contraseña. Por favor, introduce la "
+"contraseña para revelar el secreto."
 
 #: templates/check_password.html:22
 msgid "You have one remaining attempt left."
-msgstr "Il vous reste une tentative."
+msgstr "Te queda un intento restante."
 
 #: templates/check_password.html:24
 #, python-format
 msgid "You have %(n)d remaining attempts left."
-msgstr "Il vous reste %(n)d tentatives."
+msgstr "Te quedan %(n)d intentos restantes."
 
 #: templates/check_password.html:35 templates/create.html:35
 msgid "Your secret password"
-msgstr "Votre mot de passe secret"
+msgstr "Tu contraseña secreta"
 
 #: templates/confirm_reveal.html:4 templates/reveal.html:4
 msgid "Read a secret"
-msgstr "Lire un secret"
+msgstr "Leer un secreto"
 
 #: templates/confirm_reveal.html:5
 msgid "Reveal secret"
-msgstr "Révéler le secret"
+msgstr "Revelar secreto"
 
 #: templates/create.html:5
 msgid "Create a secret"
-msgstr "Lire un secret"
+msgstr "Crear un secreto"
 
 #: templates/create.html:19
-#, fuzzy
 msgid "Your secret message"
-msgstr "Votre mot de passe secret"
+msgstr "Tu mensaje secreto"
 
 #: templates/create.html:23
 msgid "Time to live"
-msgstr "Durée de vie"
+msgstr "Tiempo de vida"
 
 #: templates/create.html:33
 msgid "optional"
-msgstr "optionnel"
+msgstr "opcional"
 
 #: templates/create.html:33
 msgid "Password"
-msgstr "Mot de passe"
+msgstr "Contraseña"
 
 #: templates/create.html:40
 msgid "Create"
-msgstr "Créer"
+msgstr "Crear"
 
 #: templates/created.html:4
 msgid "Secret created"
-msgstr "Secret créé"
+msgstr "Secreto creado"
 
 #: templates/created.html:7
 msgid ""
 "Your secret has been created. You can share this link to grant\n"
 "        someone access to read it."
 msgstr ""
-"Votre secret a été créé. Vous pouvez partager ce lien pour accorder à "
-"quelqu'un l'accès à sa lecture."
+"Tu secreto ha sido creado. Puedes compartir este enlace para concederle a "
+"alguien acceso para leerlo."
 
 #: templates/created.html:23
 msgid ""
@@ -113,23 +112,22 @@ msgid ""
 "        either after the chosen time to live expires or when someone "
 "opens the link."
 msgstr ""
-"Votre secret a été stocké sur le serveur et sera supprimé soit après "
-"l'expiration de la durée de vie choisie, soit lorsque quelqu'un ouvre le "
-"lien."
+"Tu secreto ha sido almacenado en el servidor y será eliminado\n"
+"        o bien después de que expire el tiempo de vida elegido o cuando "
+"alguien abra el enlace."
 
 #: templates/created.html:25
 msgid "Therefore, the generated link can only be opened once."
-msgstr "Par conséquent, le lien généré ne peut être ouvert qu'une seule fois."
+msgstr "Por lo tanto, el enlace generado solo puede abrirse una vez."
 
 #: templates/created.html:28 templates/error.html:20 templates/reveal.html:17
 msgid "Create another secret"
-msgstr "Créer un autre secret"
+msgstr "Crear otro secreto"
 
 #: templates/reveal.html:8
 msgid ""
 "This message is displayed only once and will not be available if this "
 "page is reloaded."
 msgstr ""
-"Ce message s'affiche une seule fois et ne sera pas disponible si cette "
-"page est rechargée."
-
+"Este mensaje se muestra solo una vez y no estará disponible si esta página "
+"se recarga."
