--- a/ihaveasecret/translations/de/LC_MESSAGES/messages.po
+++ b/ihaveasecret/translations/de/LC_MESSAGES/messages.po
@@ -1,9 +1,14 @@
+# German translations for PROJECT.
+# Copyright (C) 2025 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-23 18:54+0100\n"
-"PO-Revision-Date: 2024-03-23 18:56+0100\n"
+"POT-Creation-Date: 2025-05-09 02:05+0200\n"
+"PO-Revision-Date: 2025-05-09 01:45+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: de\n"
 "Language-Team: de <LL@li.org>\n"
@@ -13,58 +18,73 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.14.0\n"
 
-#: routes.py:18
+#: routes.py:21
 msgid "1 hour"
 msgstr "1 Stunde"
 
-#: routes.py:19
+#: routes.py:22
 msgid "1 day"
 msgstr "1 Tag"
 
-#: routes.py:20
+#: routes.py:23
 msgid "1 week"
 msgstr "1 Woche"
 
-#: routes.py:97
+#: routes.py:131
+msgid "Invalid email address"
+msgstr "Ungültige E-Mail-Adresse"
+
+#: routes.py:170 routes.py:186 routes.py:201
 msgid "Sorry, that secret has already been seen or does not exist."
-msgstr "Entschuldigung, dieses Geheimnis wurde bereits angesehen oder existiert nicht."
+msgstr ""
+"Entschuldigung, dieses Geheimnis wurde bereits gesehen oder existiert "
+"nicht."
 
-#: routes.py:135
+#: routes.py:212
+msgid "Sorry, that secret has expired."
+msgstr "Entschuldigung, dieses Geheimnis ist abgelaufen."
+
+#: routes.py:256
 msgid "Incorrect password. Please try again."
-msgstr "Falsches Passwort. Bitte versuchen Sie es erneut."
+msgstr "Falsches Passwort. Bitte versuche es erneut."
 
-#: routes.py:145
+#: routes.py:266
 msgid ""
 "The secret has been deleted because of too many incorrect password "
 "attempts."
-msgstr ""
-"Das Geheimnis wurde aufgrund zu vieler falscher Passwortversuche gelöscht."
+msgstr "Das Geheimnis wurde aufgrund zu vieler falscher Passwortversuche gelöscht."
 
-#: templates/check_password.html:8
+#: templates/check_password.html:8 templates/confirm_reveal.html:7
+#: templates/reveal.html:12
+msgid "Note from the author of the message : "
+msgstr "Hinweis vom Autor der Nachricht: "
+
+#: templates/check_password.html:17
 msgid ""
 "The secret is safeguarded by a password. Please enter the password to "
 "unveil the secret."
 msgstr ""
-"Das Geheimnis ist durch ein Passwort geschützt. Bitte geben Sie das Passwort ein, um das Geheimnis zu enthüllen."
+"Das Geheimnis ist durch ein Passwort geschützt. Bitte gib das Passwort "
+"ein, um das Geheimnis zu enthüllen."
 
-#: templates/check_password.html:22
+#: templates/check_password.html:31
 msgid "You have one remaining attempt left."
-msgstr "Sie haben noch einen Versuch übrig."
+msgstr "Du hast noch einen Versuch übrig."
 
-#: templates/check_password.html:24
+#: templates/check_password.html:33
 #, python-format
 msgid "You have %(n)d remaining attempts left."
-msgstr "Sie haben noch %(n)d Versuche übrig."
+msgstr "Du hast noch %(n)d Versuche übrig."
 
-#: templates/check_password.html:35 templates/create.html:35
+#: templates/check_password.html:44 templates/create.html:46
 msgid "Your secret password"
-msgstr "Ihr geheimes Passwort"
+msgstr "Dein geheimes Passwort"
 
 #: templates/confirm_reveal.html:4 templates/reveal.html:4
 msgid "Read a secret"
 msgstr "Ein Geheimnis lesen"
 
-#: templates/confirm_reveal.html:5
+#: templates/confirm_reveal.html:16
 msgid "Reveal secret"
 msgstr "Geheimnis enthüllen"
 
@@ -72,23 +92,59 @@ msgstr "Geheimnis enthüllen"
 msgid "Create a secret"
 msgstr "Ein Geheimnis erstellen"
 
+#: templates/create.html:15
+msgid "Leave a note or explanation for the recipient"
+msgstr "Hinterlasse eine Notiz oder Erklärung für den Empfänger"
+
+#: templates/create.html:16
+msgid "This content will be displayed when the recipient opens the link"
+msgstr "Dieser Inhalt wird angezeigt, wenn der Empfänger den Link öffnet"
+
 #: templates/create.html:19
-msgid "Your secret message"
-msgstr "Ihre geheime Nachricht"
+msgid "Your note"
+msgstr "Deine Notiz"
 
 #: templates/create.html:23
+msgid "Secret Message"
+msgstr "Deine geheime Nachricht"
+
+#: templates/create.html:24
+msgid "The confidential information that you want to share"
+msgstr "Die vertraulichen Informationen, die du teilen möchtest"
+
+#: templates/create.html:27
+msgid "Your secret message"
+msgstr "Deine geheime Nachricht"
+
+#: templates/create.html:31 templates/create.html:34
 msgid "Time to live"
 msgstr "Lebensdauer"
 
-#: templates/create.html:33
-msgid "optional"
+#: templates/create.html:32
+msgid ""
+"If the message is not seen before the end of this period it will be "
+"deleted"
+msgstr ""
+"Wenn die Nachricht nicht vor Ablauf dieser Frist gesehen wird, wird sie "
+"gelöscht."
+
+#: templates/create.html:42 templates/create.html:53
+msgid "Optional"
 msgstr "optional"
 
-#: templates/create.html:33
+#: templates/create.html:42
 msgid "Password"
 msgstr "Passwort"
 
-#: templates/create.html:40
+#: templates/create.html:53
+msgid "Email"
+msgstr "E-Mail"
+
+#: templates/create.html:56
+msgid "Recipient email"
+msgstr "E-Mail des Empfängers"
+
+#: templates/create.html:64
 msgid "Create"
 msgstr "Erstellen"
 
@@ -101,7 +157,8 @@ msgid ""
 "Your secret has been created. You can share this link to grant\n"
 "        someone access to read it."
 msgstr ""
-"Ihr Geheimnis wurde erstellt. Sie können diesen Link teilen, um jemandem den Zugriff darauf zu gewähren."
+"Dein Geheimnis wurde erstellt. Du kannst diesen Link teilen, um\n"
+"        jemandem Zugang zu gewähren, es zu lesen."
 
 #: templates/created.html:23
 msgid ""
@@ -109,19 +166,31 @@ msgid ""
 "        either after the chosen time to live expires or when someone "
 "opens the link."
 msgstr ""
-"Ihr Geheimnis wurde auf dem Server gespeichert und wird gelöscht, entweder nach Ablauf der gewählten Lebensdauer oder wenn jemand den Link öffnet."
+"Dein Geheimnis wurde auf dem Server gespeichert und wird gelöscht\n"
+"        entweder nach Ablauf der gewählten Lebensdauer oder wenn jemand "
+"den Link öffnet."
 
 #: templates/created.html:25
 msgid "Therefore, the generated link can only be opened once."
 msgstr "Daher kann der generierte Link nur einmal geöffnet werden."
 
-#: templates/created.html:28 templates/error.html:20 templates/reveal.html:17
+#: templates/created.html:30
+msgid "A notification email has been sent to the provided address"
+msgstr "Eine Benachrichtigungs-E-Mail wurde an die angegebene Adresse gesendet."
+
+#: templates/created.html:36
+msgid "An error occurred while sending the email."
+msgstr "Beim Senden der E-Mail ist ein Fehler aufgetreten."
+
+#: templates/created.html:40 templates/error.html:20 templates/reveal.html:26
 msgid "Create another secret"
-msgstr "Ein weiteres Geheimnis erstellen"
+msgstr "Erstelle ein weiteres Geheimnis"
 
 #: templates/reveal.html:8
 msgid ""
 "This message is displayed only once and will not be available if this "
 "page is reloaded."
 msgstr ""
-"Diese Nachricht wird nur einmal angezeigt und ist nicht verfügbar, wenn diese Seite neu geladen wird."
+"Diese Nachricht wird nur einmal angezeigt und ist nicht verfügbar, wenn "
+"diese Seite neu geladen wird."
+
